--- a/templates/index.html
+++ b/templates/index.html
@@ -169,7 +169,7 @@
                         <h4>Last Paid Block: [[ znode.lastpaidblock ]]</h4>
                         <h4 v-if="znode.status == 'ENABLED'">Queue Position:
                             <span data-toggle="tooltip" data-placement="top" title="Based on last paid time">
-                                [[ znode.queue_pos ]] / [[ total_znode_qualified ]]
+                                [[ znode.queue_pos ]] / [[ total_znode_enabled ]]
                             </span>
                         </h4>
                         <hr>
