--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,10 @@
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Fontawesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- danielfarrell/bootstrap-combobox -->
+    <link href="/static/bootstrap-combobox.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="/static/style.css" rel="stylesheet">
@@ -21,7 +25,19 @@
 <!-- Github Corner https://github.com/tholman/github-corners -->
 <a href="https://github.com/Privex/znode-status" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 
-<div class="container">
+<div class="container" id="loading">
+    <div class="text-center">
+        <br/>
+        <br/>
+        <a href="https://www.privex.io" target="_BLANK">
+            <img src="/static/logo.png" style="width: 300px;" alt="Privex Logo" />
+        </a>
+        <br/>
+        <br/>
+        <i class='fa fa-spinner fa-spin ' style="font-size: 64px; color: #337ab7;"></i>
+    </div>
+</div>
+<div class="container" style="display: none" id="main">
     <div id="znode-info">
         <div class="text-center">
             <a href="https://www.privex.io" target="_BLANK">
@@ -43,16 +59,16 @@
 
         <!-- ZNode Search -->
         <!-- <h3>ZNode Search</h3> -->
-        <div class="input-group">
+        <!--<div class="input-group">
             <input type="text" class="form-control" placeholder="Lookup ZNode by payee address"
                    v-model="znodesearchpayee" :disabled="znodelist.length > 0" @keyup.enter="znodesearchupdate">
             <span class="input-group-btn">
-            <!-- Button trigger modal -->
             <button type="button" class="btn btn-default" v-on:click="znodesearchupdate">
                 Search
             </button>
           </span>
-        </div>
+        </div>-->
+        <znode-search v-once @update-znodesearchpayee="znodesearchupdate" historyKey="searchHistory"></znode-search>
         <!-- /ZNode Search -->
         <hr/>
         <div class="row">
@@ -237,7 +253,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
             crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+    <script src="/static/bootstrap-combobox.js"></script>
 
 {% if DEBUG %}
     <script src="https://vuejs.org/js/vue.js"></script>
@@ -258,6 +274,28 @@
                 callback(JSON.parse(data));
             })
         }
+        Vue.component('znode-search', {
+            delimiters: ['[[', ']]'],
+            props: [ 'historykey' ],
+            render: function(createElement) {
+                var searchHistory = localStorage.getItem(this.historykey);
+                if(searchHistory)
+                    searchHistory = searchHistory.split(',');
+                return createElement('select', {'class': 'form-control'}, searchHistory.map(function(addr) {
+                    return createElement('option', addr);
+                }));
+            },
+            mounted: function() {
+                this.$nextTick(function() {
+                    $(this.$el).combobox({onSelect: function(payee) {
+                        this.$emit('update-znodesearchpayee', payee)
+                    }.bind(this)});
+                });
+            },
+            beforeDestroy: function() {
+                // TODO
+            }
+        });
 
         var znodelist = new Vue({
                 el: '#znode-list',
@@ -346,7 +384,7 @@
                     znodelist_qualify: {},
                     znodelist_rank: {},
                     znodesearchpayee: "",
-                    znode: {}
+                    znode: {},
                 },
                 computed: {
                     daily_payout: function() {
@@ -411,13 +449,25 @@
                             this.xzc_price = parseFloat(data);
                         }.bind(this));
                     },
-                    znodesearchupdate: function() {
+                    znodesearchupdate: function(payee) {
+                        this.znodesearchpayee = payee;
                         if(this.znodesearchpayee && znodelist.all_znodes.length) {
                             $('#znodeModal').modal();
                             this.znode = {};
-                            localStorage.znodesearchpayee = this.znodesearchpayee;
                             $.get('/api2/znode/' + this.znodesearchpayee, function(znode) {
-                                this.znode = znode
+                                this.znode = znode;
+                                // since we got a successful lookup, we can add localStorage
+                                localStorage.znodesearchpayee = this.znodesearchpayee;
+                                var searchHistory = localStorage.getItem('searchHistory');
+                                if(searchHistory) {
+                                    searchHistory = searchHistory.split(',');
+                                    var idx = searchHistory.indexOf(this.znodesearchpayee);
+                                    if(idx > -1) {
+                                        searchHistory.splice(idx, 1);
+                                    }
+                                    searchHistory.unshift(this.znodesearchpayee);
+                                    localStorage.setItem('searchHistory', searchHistory);
+                                }
                             }.bind(this));
                         }
                         var deferreds = [
@@ -432,6 +482,8 @@
                             }.bind(this))
                         ];
                         $.when.apply(null, deferreds).done(function() {
+                            $('#loading').css({'display': 'none'});
+                            $('#main').css({'display': ''});
                             znodelist.all_znodes = [];
                             znodelist.lastpaidrank = [];
                             for (var key in this.znodelist) {
@@ -497,7 +549,7 @@
         var timer = setInterval(znodeinfo.update, 30000);
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
-        })
+        });
     </script>
 </body>
 
